修复合计金额bug

--- a/lonarui/index.html
+++ b/lonarui/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="学府考研,考研辅导,考研辅导班,考研培训班">
-    <meta name="description" content="学府考研是国内知名的高端考研教育辅导培训机构，总部位于北京，在陕西、四川、江苏、湖北等地拥有多个教学校区，辅导过超10万考研人；学府教育致力打造考研行业高端小班培训辅导，只做考研辅导培训。">
-    <meta name="author" content="学府考研全日制 ">
-    <link rel="shortcut icon" type="image/ico" href="http://www.exuefu.com/faviconx.ico">
-    <title>学府考研</title>
+    <link rel="shortcut icon" type="image/ico" href="http://lonarui.cn/faviconx.ico">
+    <title>lonarui商城</title>
 </head>
 <body>
     <div id="app"></div>
